cmake_minimum_required(VERSION 3.25)
project(mipt_lpr_cpplessons_term3)

set(CMAKE_CXX_STANDARD 23)

#add_executable(clouds weeks/week1/clouds.cpp)

#add_executable(Tsort weeks/week2/Tsort.cpp)
#add_executable(min_max_greater_less weeks/week2/min_max_greater_less.cpp)
#add_executable(Tread weeks/week2/Tread.cpp)
#add_executable(Tprint weeks/week2/Tprint.cpp)
#add_executable(Tsum_array weeks/week2/Tsum_array.cpp)

#add_executable(31 weeks/week3/1.cpp)
#add_executable(ExplcitInt weeks/week3/ExplcitInt.cpp)
#add_executable(fractions weeks/week3/fractions.cpp)
#add_executable(point weeks/week3/contest.cpp)

#add_executable(41 weeks/week4/1.cpp)
#add_executable(contest weeks/week4/branch_heir.cpp)
#add_executable(characters weeks/week4/characters.cpp)
#add_executable(branch_heir weeks/week4/branch_heir.cpp)
#add_executable(expression weeks/week4/expression.cpp)
#add_executable(dice_with_rice weeks/week4/dice_with_rice.cpp)

#add_executable(51 weeks/week5/1.cpp)
#add_executable(array weeks/week5/array.cpp)
#add_executable(ManBearAnimal weeks/week5/ManBearAnimal.cpp)
#add_executable(person weeks/week5/person.cpp)
#add_executable(pseudo_array weeks/week5/pseudo_array.cpp)
#add_executable(stack_with_max weeks/week5/stack_with_max.cpp)
#add_executable(is_same weeks/week5/is_same.cpp)

#add_executable(array weeks/week6/array.cpp)
#add_executable(apply weeks/week6/apply.cpp)
#add_executable(error_tpl weeks/week6/error_tpl.cpp)
#add_executable(string weeks/week6/string.cpp)
#add_executable(are_we_same weeks/week6/are_we_same.cpp)

#add_executable(TPow labs/lab1/TPow.cpp)
#add_executable(grid labs/lab1/grid.cpp)
#add_executable(grids labs/lab1/grids.cpp)

#add_executable(excepts weeks/week8/excepts.cpp)
#add_executable(accumulate weeks/week8/accumulate.cpp)

add_executable(big_half weeks/week9/big_half.cpp)
add_executable(sum_of_two weeks/week9/sum_of_two.cpp)
add_executable(duplicates weeks/week9/duplicates.cpp)
add_executable(distr weeks/week9/distr.cpp)